TCK cleanup
- Option to upload tck-downloads to a local Nexus cache
  - helps to save dependency on network and downloading huge packages
  - no need to run this part again on rebuild
  - option to push that to a separate jenkins job
- When using deploy plugin, do the upload in the end
- Workaround for maven-war-plugin and artifacts without web.xml and servlets
  - the plugin uses servlet dependency to guess the spec, however now the
    servlet is not a mandatory dependency for a war file.
- Fixed warning about property file encoding
  - usually we use Latin1 as in old JDKs, but using UTF-8 shouldn't harm here
- Synchronzied dependencies
  - Updated shrinkwrap to 3.3.4 and its "relatives" which were sometimes
    overriden by other dependency
  - Arquillian 2.0.0
- Removed connectors-full tck - already covered by TckRunner
- Updated Tags TCK
- Synchronized TCK standalone projects to use same rules, common dependencies
  and same macros.
- Faces TCK tricked to follow our dependency tree
- Arquillian extension changed group id

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

# Conflicts:
#	nucleus/parent/pom.xml