@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2021, 2023 Contributors to the Eclipse Foundation. All rights reserved.
+    Copyright (c) 2021, 2025 Contributors to the Eclipse Foundation. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -37,32 +37,13 @@
 
         <tck.home>${project.build.directory}/connectors-tck</tck.home>
         <tck.tests.home>${tck.home}/src/com/sun/ts/tests/connector</tck.tests.home>
-
-        <glassfish.home>${project.build.directory}/glassfish7</glassfish.home>
-        <glassfish.version>${project.version}</glassfish.version>
-        <glassfish.asadmin>${glassfish.home}/glassfish/bin/asadmin</glassfish.asadmin>
-
-        <jacoco.includes>org/glassfish/**\:com/sun/enterprise/**</jacoco.includes>
-
-        <port.admin>14848</port.admin>
-        <port.derby>11527</port.derby>
-        <port.http>18080</port.http>
-        <port.https>18181</port.https>
-        <port.jms>17676</port.jms>
-        <port.jmx>18686</port.jmx>
-        <port.orb>13700</port.orb>
-        <port.orb.mutual>13920</port.orb.mutual>
-        <port.orb.ssl>13820</port.orb.ssl>
-        <port.harness.log>12000</port.harness.log>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.glassfish.main.distributions</groupId>
             <artifactId>glassfish</artifactId>
-            <version>${glassfish.version}</version>
             <type>zip</type>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.main.tests.tck</groupId>
@@ -152,122 +133,127 @@
                     <execution>
                         <id>prepare-tck-and-glassfish</id>
                         <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                         <configuration>
                             <target xmlns:if="ant:if" xmlns:unless="ant:unless">
                                 <taskdef resource="net/sf/antcontrib/antcontrib.properties"
-                                         classpathref="maven.plugin.classpath" />
+                                     classpathref="maven.plugin.classpath" />
 
-                               <macrodef name="tck-setting">
-                                    <attribute name="key" /> <attribute name="value" />
+                                <macrodef name="tck-property-update">
+                                    <attribute name="key" />
+                                    <attribute name="value" />
                                     <sequential>
-                                      <replaceregexp file="${tck.home}/bin/ts.jte" byline="true"
-                                        match="@{key}=.*" replace="@{key}=@{value}" />
+                                      <replaceregexp byline="true"
+                                        file="${tck.home}/bin/ts.jte"
+                                        match="@{key}=.*"
+                                        replace="@{key}=@{value}" />
+                                    </sequential>
+                                </macrodef>
+                                <macrodef name="tck-line-update">
+                                    <attribute name="pattern" />
+                                    <attribute name="replacement" />
+                                    <sequential>
+                                      <replaceregexp byline="true"
+                                        file="${tck.home}/bin/ts.jte"
+                                        match="@{pattern}"
+                                        replace="@{replacement}" />
+                                    </sequential>
+                                </macrodef>
+                                <macrodef name="tck-keystore-suffix">
+                                    <attribute name="file" />
+                                    <sequential>
+                                        <replaceregexp flags="g"
+                                          file="@{file}"
+                                          match="/cacerts\.jks"
+                                          replace="/cacerts.p12" />
+                                        <replaceregexp flags="g"
+                                          file="@{file}"
+                                          match="/keystore\.jks"
+                                          replace="/keystore.p12" />
                                     </sequential>
                                 </macrodef>
 
-                                <macrodef name="tck-add">
-                                    <attribute name="key" /> <attribute name="value" />
-                                    <sequential>
-                                        <concat append="true" destfile="${tck.home}/bin/ts.jte">@{key}=@{value}${line.separator}</concat>
-                                    </sequential>
-                                </macrodef>
+                                <tck-line-update
+                                    pattern="^(.*/)admin-cli.jar(.*)"
+                                    replacement="\1hk2.jar:${jaspic.home}/modules/jakarta.activation-api.jar\2" />
+                                <tck-line-update
+                                    pattern="^(.*\$\{JAVA_HOME\}/bin/java)(.*)"
+                                    replacement="\1 --module-path ${jaspic.home}/lib/bootstrap --add-modules ALL-MODULE-PATH \2" />
 
-                                <!-- Change configuration -->
+                                <tck-property-update key="connector.home" value="${glassfish.home}/glassfish"/>
+                                <tck-property-update key="harness.log.traceflag" value="true"/>
+                                <tck-property-update key="s1as.jvm.options" value="-Dj2eelogin.name=${user}:-Dj2eelogin.password=${password}"/>
 
-                                <tck-setting key="connector.home" value="${glassfish.home}/glassfish"/>
-                                <tck-setting key="harness.log.traceflag" value="true"/>
-                                <tck-setting key="s1as.jvm.options" value="-Dj2eelogin.name=${user}:-Dj2eelogin.password=${password}"/>
+                                <tck-property-update key="glassfish.admin.port" value="${port.admin}"/>
+                                <tck-property-update key="s1as.admin.port" value="${port.admin}"/>
+                                <tck-property-update key="database.port" value="${port.derby}"/>
+                                <tck-property-update key="orb.port" value="${port.orb}"/>
+                                <tck-property-update key="webServerHost" value="localhost"/>
+                                <tck-property-update key="webServerPort" value="${port.http}"/>
+                                <tck-property-update key="securedWebServicePort" value="${port.https}"/>
+                                <tck-property-update key="harness.log.port" value="${port.harness.log}"/>
 
-                                <tck-setting key="webServerHost" value="localhost"/>
-                                <tck-setting key="webServerPort" value="${port.http}"/>
-                                <tck-setting key="securedWebServicePort" value="${port.https}"/>
-                                <tck-setting key="s1as.admin.port" value="${port.admin}"/>
-                                <tck-setting key="glassfish.admin.port" value="${port.admin}"/>
-                                <tck-setting key="orb.host" value="localhost"/>
-                                <tck-setting key="orb.port" value="${port.orb}"/>
-                                <tck-setting key="database.port" value="${port.derby}"/>
-                                <tck-setting key="harness.log.port" value="${port.harness.log}"/>
-
-                                <tck-setting key="report.dir" value="${tck.home}/connectorsreport/connectors"/>
-                                <tck-setting key="work.dir" value="${tck.home}/connectorswork/connectors"/>
+                                <tck-property-update key="report.dir" value="${tck.home}/connectorsreport/connectors"/>
+                                <tck-property-update key="work.dir" value="${tck.home}/connectorswork/connectors"/>
 
                                 <replace file="${tck.home}/bin/ts.jte">
-                                  <replacetoken><![CDATA[-XX\\\:MaxPermSize=512m:]]></replacetoken>
-                                  <replacevalue><![CDATA[]]></replacevalue>
+                                    <replacetoken><![CDATA[-XX\\\:MaxPermSize=512m:]]></replacetoken>
+                                    <replacevalue><![CDATA[]]></replacevalue>
                                 </replace>
+
+                                <tck-keystore-suffix file="${tck.home}/bin/xml/impl/glassfish/common.xml" />
+                                <tck-keystore-suffix file="${tck.home}/bin/xml/impl/glassfish/s1as.xml" />
 
                                 <limit maxwait="60">
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin">
+                                        <env key="AS_JAVA" value="${java.home}"/>
                                         <arg value="delete-domain"/>
                                         <arg value="domain1" />
-                                        <env key="AS_JAVA" value="${java.home}"/>
                                     </exec>
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" failonerror="true">
+                                        <env key="AS_JAVA" value="${java.home}"/>
                                         <arg value="create-domain"/>
                                         <arg value="--domainproperties=domain.adminPort=${port.admin}:domain.instancePort=${port.http}:http.ssl.port=${port.https}:jms.port=${port.jms}:domain.jmxPort=${port.jmx}:orb.listener.port=${port.orb}:orb.ssl.port=${port.orb.ssl}:orb.mutualauth.port=${port.orb.mutual}" />
                                         <arg value="--user=admin" />
                                         <arg value="--nopassword" />
                                         <arg value="domain1" />
-                                        <env key="AS_JAVA" value="${java.home}"/>
                                     </exec>
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" failonerror="true">
-                                        <arg value="start-domain"/>
                                         <env key="AS_JAVA" value="${java.home}"/>
+                                        <arg value="start-domain"/>
                                     </exec>
 
                                     <if>
                                         <isset property="jacoco.version" />
                                         <then>
                                             <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" failonerror="true">
+                                                <env key="AS_JAVA" value="${java.home}"/>
                                                 <arg value="create-jvm-options" />
                                                 <arg value="--port=${port.admin}" />
                                                 <arg value="&quot;-javaagent\:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}/jacoco-it.exec,includes=${jacoco.includes}&quot;" />
-                                                <env key="AS_JAVA" value="${java.home}"/>
                                             </exec>
                                         </then>
                                     </if>
-
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" failonerror="true">
+                                        <env key="AS_JAVA" value="${java.home}"/>
                                         <arg value="create-jvm-options" />
                                         <arg value="--port=${port.admin}" />
                                         <arg value="&quot;-Djava.security.manager&quot;" />
-                                        <env key="AS_JAVA" value="${java.home}"/>
                                     </exec>
 
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" failonerror="true">
+                                        <env key="AS_JAVA" value="${java.home}"/>
                                         <arg value="stop-domain"/>
                                         <arg value="domain1"/>
-                                        <env key="AS_JAVA" value="${java.home}"/>
                                     </exec>
                                 </limit>
 
                                 <mkdir dir="${tck.home}/connectorsreport"/>
                                 <mkdir dir="${tck.home}/connectorsreport/connectors"/>
-
-                                <replace file="${tck.home}/bin/xml/ts.top.import.xml">
-                                  <replacetoken><![CDATA[<jvmarg value="-Xmx512m"/>]]></replacetoken>
-                                  <replacevalue><![CDATA[<jvmarg value="-Xmx512m"/>
-                                <jvmarg value="-Djavatest.security.noSecurityManager=true"/>]]></replacevalue>
-                                </replace>
-
-                                <replace file="${tck.home}/bin/xml/ts.top.import.xml" if:set="tck.suspend" >
-                                  <replacetoken><![CDATA[<jvmarg value="-Xmx512m"/>]]></replacetoken>
-                                  <replacevalue><![CDATA[<jvmarg value="-Xmx512m"/>
-                                <jvmarg value="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=9010"/>]]></replacevalue>
-                                </replace>
-
-                                <replace file="${tck.home}/bin/xml/ts.top.import.xml" unless:set="tck.suspend" >
-                                  <replacetoken><![CDATA[<jvmarg value="-Xmx512m"/>
-                                <jvmarg value="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=9010"/>]]></replacetoken>
-                                  <replacevalue><![CDATA[<jvmarg value="-Xmx512m"/>]]></replacevalue>
-                                </replace>
-
-
                             </target>
                         </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
                     </execution>
 
                     <execution>
@@ -280,17 +266,17 @@
                             <target xmlns:if="ant:if" xmlns:unless="ant:unless">
                                 <taskdef resource="net/sf/antcontrib/antcontrib.properties"
                                          classpathref="maven.plugin.classpath" />
-                                <limit maxwait="60">
+                                <limit maxwait="20">
                                     <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin" failonerror="true">
-                                        <arg value="start-domain"/>
                                         <env key="AS_JAVA" value="${java.home}"/>
+                                        <arg value="start-domain"/>
                                     </exec>
                                 </limit>
 
                                 <exec executable="${ant.home}/bin/ant" dir="${tck.home}/bin" failonerror="true">
-                                    <arg value="config.vi"  />
                                     <env key="AS_JAVA" value="${java.home}"/>
                                     <env key="JAVA_HOME" value="${java.home}"/>
+                                    <arg value="config.vi"  />
                                 </exec>
 
                                 <!-- Deploy single test -->
@@ -299,24 +285,23 @@
                                     <echo>Deploying from ${test.dir}</echo>
 
                                     <exec executable="${ant.home}/bin/ant" dir="${test.dir}" failonerror="true">
-                                        <arg value="deploy"  />
                                         <env key="AS_JAVA" value="${java.home}"/>
                                         <env key="JAVA_HOME" value="${java.home}"/>
+                                        <arg value="deploy"  />
                                     </exec>
                                 </sequential>
 
                                 <!-- Deploy all tests -->
                                 <sequential unless:set="run.test" >
                                     <exec executable="${ant.home}/bin/ant" dir="${tck.tests.home}" failonerror="true">
-                                        <arg value="deploy.all"  />
                                         <env key="AS_JAVA" value="${java.home}"/>
                                         <env key="JAVA_HOME" value="${java.home}"/>
+                                        <arg value="deploy.all"  />
                                     </exec>
                                 </sequential>
                             </target>
                         </configuration>
                     </execution>
-
 
                      <execution>
                         <id>run-tck-tests</id>
@@ -328,20 +313,19 @@
                             <target xmlns:if="ant:if" xmlns:unless="ant:unless">
                                 <taskdef resource="net/sf/antcontrib/antcontrib.properties"
                                          classpathref="maven.plugin.classpath" />
-
                                 <echo level="info" message="Start running all tests" />
                                 <exec executable="${ant.home}/bin/ant" dir="${tck.home}/bin" resultproperty="testResult">
+                                    <env key="AS_JAVA" value="${java.home}"/>
+                                    <env key="JAVA_HOME" value="${java.home}"/>
                                     <arg value="-Dmultiple.tests=${run.test}" if:set="run.test" />
                                     <arg value="runclient.nobinaryfinder" if:set="run.test" />
                                     <arg value="run.all" unless:set="run.test" />
-                                    <env key="AS_JAVA" value="${java.home}"/>
-                                    <env key="JAVA_HOME" value="${java.home}"/>
                                     <env key="LC_ALL" value="C" />
                                 </exec>
 
                                 <exec executable="${glassfish.asadmin}" dir="${glassfish.home}/glassfish/bin">
-                                    <arg value="stop-domain" />
                                     <env key="AS_JAVA" value="${java.home}"/>
+                                    <arg value="stop-domain" />
                                 </exec>
 
                                 <if>
